fix images path

--- a/s1-125.html
+++ b/s1-125.html
@@ -26,7 +26,7 @@
    }
    
    #map {
-		background: url('s1-125/s1-125.jpg') no-repeat;
+		background: url('s125/s1-125.jpg') no-repeat;
 		position: relative;
 		top: -50px
    }
@@ -88,7 +88,7 @@
 	<script src="roundslider/rheostat.js"></script>
 	<script src="reostat.js"></script>
 
-	<script src="s1-125/s125.js"></script>
+	<script src="s125/s125.js"></script>
 
 
 	
