--- a/s1-125.html
+++ b/s1-125.html
@@ -277,6 +277,14 @@
                             </table>
                         </div>
                     </div>
+                    <div id="tab-3">
+                        Внешний импульс (Замедление времени 1 к 1 000 000):
+                        <div style="width:400px;height:150px" id="outer_pulse"></div>
+                    </div>
+                    <div id="tab-4">
+                        Синхроимпульс (Замедление времени 1 к 1 000 000):
+                        <div style="width:400px;height:150px" id="clock_pulse"></div>
+                    </div>
 				</div>
 			</td>
 		</tr>
