--- a/s1-125.html
+++ b/s1-125.html
@@ -135,7 +135,9 @@
 	<table>
 		<tr>
 			<td>
-				<div id='map'></div>
+        <div id='map'>
+          <div style="position:relative; left:50px; top:-400px" z-index=1000000 id="placeholder"></div>
+        </div>
 			</td>
 			<td>
 				<div id='tabs' style="max-height: 610px; width: 650px">
