--- a/s1-125.html
+++ b/s1-125.html
@@ -32,8 +32,8 @@
    }
 
    #placeholder {
-	width: 400px;
-	height: 250px;
+	   width: 300px;
+	   height: 250px;
    }
 
     #c3 {
@@ -136,7 +136,7 @@
 		<tr>
 			<td>
         <div id='map'>
-          <div style="position:relative; left:50px; top:-400px" z-index=1000000 id="placeholder"></div>
+          <div style="position:relative; left:80px; top:-400px; height: 230px" id="placeholder"></div>
         </div>
 			</td>
 			<td>
