--- a/s1-125.html
+++ b/s1-125.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <style type="text/css">
+  .flot-tick-label{
+    display:none;
+  }
 	.ui-tooltip {
 		opacity: 0.8;
 	}
@@ -136,7 +139,7 @@
 		<tr>
 			<td>
         <div id='map'>
-          <div style="position:relative; left:80px; top:-400px; height: 230px" id="placeholder"></div>
+          <div style="position:relative; left:102px; top:-415px; height: 250px" id="placeholder"></div>
         </div>
 			</td>
 			<td>
