--- a/s1-125.html
+++ b/s1-125.html
@@ -151,6 +151,7 @@
                     <div id="tab-0">
                         <div id="attrGenA">
                             <input type="text" name="signalA" value="sin(x)" id="signalA">
+                            <input id="applySignalA" type="button" value="Выполнить">
                         </div>
                     </div>
 
@@ -158,6 +159,7 @@
                     <div id="tab-1">
                         <div id="attrGenB">
                             <input type="text" name="signalB" value="cos(x)" id="signalB">
+                            <input id="applySignalB" type="button" value="Выполнить">
                         </div>
                     </div>
 
