--- a/s1-125.html
+++ b/s1-125.html
@@ -93,6 +93,7 @@
 
     <script src="s125/s125.js"></script>
     <script src="s125/generator.js"></script>
+    <script src="s125/s125-exersises.js"></script>
 
 
 
