--- a/s1-125.html
+++ b/s1-125.html
@@ -208,9 +208,9 @@ function setMode2(map, mode)	{
 
           <div id="tab-2">
             <div id="menu" style="font-size:90%; 100%; display: block;">
-              <h3 style="font-weight: bolder; font-size: 150%">блок преобразования частоты язч-175/1</h3>
+              <h3 style="font-weight: bolder; font-size: 150%">Осциллограф универсальный С1-125</h3>
               <div>
-                блок преобразования частоты автоматический язч-175 (язч-175/1) предназначен для преобразования и автоматического изменения совместно с частотомером электронно-счетным вычислительным чз-64(чз-64/1) частоты непрерывных синусоидальных (нг) сигналов и несущей частоты импульсно-модулированных (им) сигналов в диапазоне частот от 1,5 до 18 ггц
+                Осциллограф универсальный С1-125 предназначен для исследования периодических электрических сигналов путём визуального наблюдения и измерения их амплитудных и временных параметров по шкале экрана электронно-лучевой трубки (ЭЛТ) и полосе частот от 0 до 10 MHz в лабораторных, цеховых и полевых условиях.
               </div>
               <h3 id="mode_header">режим тренажера: режим эмулятора</h3>
               <div id="state_list">
